@@ -1,5 +1,9 @@
 #VERSION 0.7.95#
 
+*  Peak_Router > fixed method setBaseUri() to use constant SVR_URL as base when $base_uri is empty
+
+*  Peak_Boot > fixed an issue with include path of Peak_Core
+
 *  Peak_Application > add exception when using internal login but application can't find the login controller
 
 *  Peak_View_Render > fixed baseUrl(). remove unwanted double slash // in url
